# Linda

./: .env_example  .gitignore  Anforderungen.md  Linda.py  LindaConfig.py  LindaGlobals.py  LindaService.py  LindaSetup.py  README.md  configsample.ini  pyproject.toml  requirements.txt  setup.cfg  utilities.py
linda/: config.py  globals.py  linda.py  main.py  service.py  setup.py  utilities.py
