[tool.poetry]
name = "linda"
version = "0.1.0"
description = ""
authors = ["Benito Buchheim <github.benito.2017@buchheims.de>"]

[tool.poetry.dependencies]
python = "^3.8"
configparser = "^5.0.2"
jsonpickle = "^2.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
