[tool.poetry]
name = "linda"
version = "0.1.0"
description = ""
authors = ["Benito Buchheim <github.benito.2017@buchheims.de>"]

[tool.poetry.scripts]
runlinda = "linda:main.main"
setuplinda = "linda:setup.setup_linda"

[tool.poetry.dependencies]
python = "^3.8"
jsonpickle = "^2.1.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
